--- a/Home.html
+++ b/Home.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home</title>
+    <title>Rehome</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./Home.css">
+    <link rel="stylesheet" href="./rehome.css">
 </head>
 <body>
     <div class="header">
-        <div class="container">
+        <div class="content">
             <div class="image"><img src="logo.png">
-             <div class="header-wrapper">
-             <a class="active" href="home">Home</a>
-             <a href="features">Features</a>
-             <a href="pricing">Pricing</a>
-             <a href="learn">Learn</a>
-             <a href="security">Security</a>
-             <a href="about us">About us</a>
-             <a href="contact">Contact</a>
-             </div>
-             </div>
-              </div>
+                <div class="header-right">
+                <a class="active" href="home">Home</a>
+                <a href="features">Features</a>
+                <a href="pricing">Pricing</a>
+                <a href="learn">Learn</a>
+                <a href="security">Security</a>
+                <a href="about us">About us</a>
+                <a href="contact">Contact</a>
+                <button class="btn">Book a Demo</button>
+                </div>
             </div>
+        </div>
     </div>
+<div class="page1">
+    <div class="container1">
+        <div class="content2">
+            <h1 class="h2">Centralise<br> Procurement of <br>Labeled Data to<br>
+                create better AI,<br> Faster</h1>
+        </div>
+    </div>
+</div>
+</div>
 </body>
+</html>
