--- a/Home.html
+++ b/Home.html
@@ -3,7 +3,7 @@
 <head>
     <title>Rehome</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./rehome.css">
+    <link rel="stylesheet" href="./Home.css">
 </head>
 <body>
     <div class="header">
